# RiceLinkAgent_based_on_langchain

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  test.py
app/: main.py  server.py  state.py
app/core/: config.py  llm.py  logger.py  models.yaml
app/graphs/: flow.py
app/nodes/: llm_nodes.py
test/: test_llm.py
