[project]
name = "ricelinkagent-based-on-langchai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
]
